# langchain-e-python-criando-ferramentas-com-a-openai

./: .gitignore  .langchain.db  llm.py  main.py  pyproject.toml
docs/: GTB_gold_Nov23.txt
